Initial base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -76,8 +76,7 @@
         
         .smooth-scroll {
             scroll-behavior: smooth;
-        }
-    </style>
+        }    </style>
 </head>
 
 <body class="bg-dark-bg text-white">
